Fixed header on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9775,8 +9775,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #intro-img {
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 300px;
+  max-height: 300px;
   margin-bottom: 30px;
 }
 
